--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+
 # Logs
+*.env
 logs
 *.log
 npm-debug.log*
@@ -6,7 +8,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
 dist
 dist-ssr
